fixed some layout issues

--- a/front/css/main.css
+++ b/front/css/main.css
@@ -147,6 +147,7 @@
 
 .navbar-brand {
     padding-left: 70px;
+    padding-right: 80px;
 }
 
 
